--- a/uptick-movie-app/public/index.html
+++ b/uptick-movie-app/public/index.html
@@ -13,6 +13,7 @@
 
   </head>
   <body>
+    <script src="http://localhost:8097"></script> // This is strictly for debugging purposes.
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
